Fixes for is_visible and is_active.

--- a/src/css/both/view-index.styl
+++ b/src/css/both/view-index.styl
@@ -98,7 +98,7 @@ button#thet-button-load_more
 	position absolute
 	font-size 12px
 	line-height 1.5
-	z-index 1
+	z-index 110
 	margin 5px
 
 .thet-index-typography-visibility-message
